--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="15">
        <tr>
         <td><img src="Clash.jpg"  width="200" alt="тут моя аватарка"/></td>
-        <td><h1>Набережных Александр!!!</h1>
+        <td><h1>Александр!!!</h1>
             <p><em>Я пишу свой первый 
                 <strong>сайт</strong></em></p>
             <p>Я люблю путешествовать </p></td>
